# AIO-HomeMediaStack

./: docker-compose.yml  pyproject.toml
debridbridge/: Dockerfile  config.py  main.py
debridbridge/arr/: client.py
debridbridge/debridbridge/: database.py  main.py
debridbridge/debridbridge/arr/: models.py
debridbridge/debridbridge/importer/: pipeline.py
debridbridge/debridbridge/mount/: manager.py
debridbridge/debridbridge/parser/: guesser.py  patterns.py
debridbridge/debridbridge/web/: api.py
debridbridge/debridbridge/webdav/: server.py
debridbridge/importer/: pipeline.py
debridbridge/mount/: manager.py
debridbridge/parser/: models.py  multiseason.py  normaliser.py
debridbridge/qbit/: api.py
debridbridge/ratelimit/: limiter.py
debridbridge/realdebrid/: client.py  models.py
debridbridge/repair/: worker.py
debridbridge/tests/: test_parser.py  test_ratelimit.py
debridbridge/web/static/: index.html
debridbridge/webdav/: server.py
tests/: test_pipeline.py
